--- a/MajorAssignment/CartService/src/main/resources/application-local.properties
+++ b/MajorAssignment/CartService/src/main/resources/application-local.properties
@@ -1,6 +1,6 @@
-server.port=8084
+server.port=8082
 
-spring.datasource.url=jdbc:h2:file:C:/Bhalaji/hashkart;AUTO_SERVER=TRUE
+spring.datasource.url=jdbc:h2:file:C:/Users/neoarya/Desktop/muleSchool-Java/javaSpringBoot/majorAssignment;AUTO_SERVER=TRUE
 #spring.datasource.url=jdbc:h2:mem:testdb
 
 spring.datasource.driverClassName=org.h2.Driver
